--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -37,7 +37,7 @@
         <input type="name" name="name" id="name" />
         <label for="email">Email</label>
         <input type="email" name="email" id="email" />
-        <label for="text">Message</label>
+        <label for="text">message</label>
         <textarea name="text" id="text"></textarea>
         <button type="submit">submit</button>
       </form>
